# tap-bigquery

./: .gitignore  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  sample_config.json  setup.py
tap_bigquery/: __init__.py  main.py  sync_bigquery.py  utils.py
tests/: install_test.sh  test_query.py
